--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-global-configuration": "^1.3.0",
+    "react-icons": "^3.8.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "reactstrap": "^8.0.1"
